--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -61,6 +61,7 @@
 @clrListText: @clrText;
 @clrListTextFaded: @clrTextFaded;
 @clrListTextFadedLess: @clrTextFadedLess;
+@clrListTextFadedMore: @clrTextFadedMore;
 @clrListTextActive: #ffffff;
 @clrListTextActiveFaded: fade(@clrListTextActive, 50%);
 @clrListScrollbar: #767b87;
