Arc-Dark: activity dashboard code cleanup

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -83,6 +83,17 @@
 @clrPrefsWarningBar: lighten(@clrPrefsBodyBg, 5%);
 
 //---------------------------------
+// Activity dashboard
+//---------------------------------
+@clrDashboardBg: @clrListBg;
+@clrDashboardText: @clrText;
+@clrDashboardTextFaded: @clrTextFaded;
+@clrDashboardTextFadedLess: @clrTextFadedLess;
+@clrDashboardTextFadedMore: @clrTextFadedMore;
+@clrDashboardWarningBar: lighten(@clrDashboardBg, 5%);
+@clrDashboardScrollbar: #767b87;
+
+//---------------------------------
 // Controls
 //---------------------------------
 @clrInputBg: #404552;
