--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -18,6 +18,11 @@
 	border: none;
 }
 
+// Needed for activity dashboard
+body.platform-linux .sheet-toolbar-container {
+	background: @clrDashboardBg;
+}
+
 //------------------------------------------------------------
 // Controls
 //------------------------------------------------------------
