Arc-Dark: fix message link underline

--- a/Arc-Dark/styles/email-frame.less
+++ b/Arc-Dark/styles/email-frame.less
@@ -16,6 +16,7 @@
 
 	a {
 		color: @clrAccent !important;
+		text-decoration: underline !important;
 
 		&:hover {
 			color: @clrAccent !important;
