Arc-Dark: fix activity dashboard link styling

--- a/Arc-Dark/styles/activity.less
+++ b/Arc-Dark/styles/activity.less
@@ -88,6 +88,14 @@
 
 	.empty-note {
 		color: @clrDashboardTextFaded;
+
+		a {
+			text-decoration: underline !important;
+
+			&:hover {
+				cursor: pointer;
+			}
+		}
 	}
 }
 
