--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -129,6 +129,12 @@
 @clrSliderButtonBgActive: @clrAccent;
 @clrSliderButtonBorderActive: @clrAccent;
 
+@clrPopoverBg: #383c4a;
+@clrPopoverBorder: #20222a;
+@clrPopoverBgHover: @clrAccent;
+@clrPopoverText: #bac3cf;
+@clrPopoverTextActive: #ffffff;
+
 //------------------------------------------------------------
 // LESS mixins
 //------------------------------------------------------------
