Arc-Dark: fix contact sidebar related thread active state

--- a/Arc-Dark/styles/contact-sidebar.less
+++ b/Arc-Dark/styles/contact-sidebar.less
@@ -76,6 +76,11 @@
 		&:hover {
 			background-color: @clrListHover;
 		}
+
+		&:active {
+			background-color: @clrAccent;
+			color: @clrTextActive;
+		}
 	}
 
 	.toggle {
