Arc-Dark: fix message draft recipient token background

--- a/Arc-Dark/styles/message-draft.less
+++ b/Arc-Dark/styles/message-draft.less
@@ -166,6 +166,11 @@
 // Draft message (edit mode) recipient tokens
 //------------------------------------------------------------
 .tokenizing-field {
+	// Fix for popover menu styling
+	.header-container {
+		background: transparent;
+	}
+
 	.token {
 		box-shadow: none;
 		background: @clrButtonBg;
