Arc-Dark: message translation bar

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -44,6 +44,7 @@
 @clrBodyBg: #404552;
 @clrBodyBgDarker: darken(@clrBodyBg, 2%);
 @clrWarningBar: lighten(@clrBodyBg, 5%);
+@clrTranslateBar: darken(@clrBodyBg, 4%);
 @clrScrollBar: #767b87;
 
 @clrToolBtnBgHover: rgba(95, 105, 127, 0.37);
