Arc-Dark: collapsed/minified messages same color as normal messages

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -250,7 +250,7 @@
 //------------------------------------------------------------
 #message-list .message-item-wrap.collapsed {
 	.message-item-white-wrap {
-		background-color: @clrBodyBgDarker;
+		background-color: @clrBodyBg;
 	}
 
 	.message-item-area {
@@ -274,7 +274,7 @@
 #message-list .minified-bundle {
 	.msg-line {
  		box-shadow: none;
-		background-color: @clrBodyBgDarker;
+		background-color: @clrBodyBg;
 		border: 1px solid @clrWindowBorder;
 		border-radius: 3px 3px 0 0;
 	}
