Arc-Dark: fix popover header/footer borders

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -134,7 +134,10 @@ select {
 .category-picker-dropdown .menu .header-container,
 .menu .header-container {
 	background: @clrPopoverBg;
-	border-bottom: 1px solid @clrPopoverBg !important;
+}
+
+.menu .header-container {
+	border-bottom: 1px solid @clrPopoverBg;
 }
 
 .menu .content-container {
@@ -144,7 +147,10 @@ select {
 .menu .footer-container,
 .button-dropdown .secondary-items .menu .footer-container {
 	background: @clrPopoverBg;
-	border-top: 1px solid @clrPopoverBg !important;
+}
+
+.message-item-white-wrap.composer-outer-wrap .composer-participant-field .dropdown-component .signature-button-dropdown .button-dropdown .secondary-items .menu .footer-container {
+	border-top: 1px solid @clrPopoverBg;
 }
 
 .button-dropdown .secondary-items .menu .item,
