--- a/Arc-Dark/styles/message-draft.less
+++ b/Arc-Dark/styles/message-draft.less
@@ -169,6 +169,7 @@
 	// Fix for popover menu styling
 	.header-container {
 		background: transparent;
+		border: none;
 	}
 
 	.token {
@@ -341,7 +342,7 @@
 	.composer-participant-field .dropdown-component .signature-button-dropdown .button-dropdown.open img.signature-button,
 	.composer-participant-field .dropdown-component .signature-button-dropdown .only-item img.signature-button {
 		background-color: @clrButtonText;
-	}	
+	}
 }
 
 //------------------------------------------------------------
