Arc-Dark: popover menus final pass

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -132,7 +132,8 @@
 @clrPopoverBg: #383c4a;
 @clrPopoverBorder: #20222a;
 @clrPopoverBgHover: @clrAccent;
-@clrPopoverText: #bac3cf;
+@clrPopoverText: #d3dae3;
+@clrPopoverTextFaded: fade(@clrPopoverText, 60%);
 @clrPopoverTextActive: #ffffff;
 
 //------------------------------------------------------------
