Arc-Drak: fix link colors

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -46,6 +46,9 @@
 @clrTranslateBar: darken(@clrBodyBg, 3%);
 @clrScrollBar: #767b87;
 
+@clrLink: #a9caf1;
+@clrLinkVisited: #7eafe9;
+
 @clrToolBtnBgHover: rgba(95, 105, 127, 0.37);
 @clrToolBtnBorderHover: rgba(21, 23, 28, 0.37);
 @clrToolBtnBgActive: @clrAccent;
