--- a/Arc-Dark/styles/email-frame.less
+++ b/Arc-Dark/styles/email-frame.less
@@ -15,15 +15,15 @@
 	}
 
 	a {
-		color: @clrAccent !important;
+		color: @clrLink !important;
 		text-decoration: underline !important;
 
 		&:hover {
-			color: @clrAccent !important;
+			color: @clrLink !important;
 		}
 
 		&:visited {
-			color: darken(@clrAccent, 10%) !important;
+			color: @clrLinkVisited !important;
 		}
 	}
 
