--- a/Arc-Dark/styles/sidebar-toolbar.less
+++ b/Arc-Dark/styles/sidebar-toolbar.less
@@ -140,10 +140,11 @@
 	.activity-summary-cta {
 		background: @clrWindowBg;
 		border-top: 1px solid @clrWindowBorder;
-		color: @clrAccent;
+		color: @clrTextFadedLess;
 
 		&:hover {
 			cursor: pointer;
+			color: @clrAccent;
 		}
 
 		&:active {
