--- a/Arc-Dark/styles/theme-selector.less
+++ b/Arc-Dark/styles/theme-selector.less
@@ -39,10 +39,9 @@
 
 	.create-theme {
 		a {
-			color: @clrAccent !important;
+			color: @clrLink !important;
 			text-decoration: underline;
 			cursor: pointer;
-
 		}
 	}
 }
