Arc-Dark: fix select dropdown colors

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -115,6 +115,11 @@ select {
 		border: 1px solid @clrButtonBorderActive;
 		color: @clrButtonTextActive;
 	}
+
+	option {
+		background: @clrPopoverBg;
+		color: @clrPopoverText;
+	}
 }
 
 //---------------------------------
