Arc-Dark: minor message layout tweaks

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -116,6 +116,8 @@
 
 #message-list {
 	.message-header {
+		margin-bottom: 12px;
+
 		.header-row {
 			font-size: 14px;
 
@@ -321,6 +323,7 @@
 	height: 1.7em;
 	font-size: 1em;
 	padding: 0.3em 0.7em;
+	margin: 16px 0 3px;
 
 	&:hover {
 		background: @clrButtonBgHover;
