Arc-Dark: fix preferences signature photo box

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -608,6 +608,14 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 				color: @clrPrefsTextFadedLess;
 			}
 
+			.field.photo-picker .photo-well {
+				border: 1px solid @clrWindowBorder;
+
+				&:hover {
+					border: 1px solid @clrAccent;
+				}
+			}
+
 			.field.photo-picker .drop-note {
 				color: @clrPrefsTextFaded;
 				font-size: 0.9em;
