Arc-Dark: preferences signature page small tweaks

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -556,6 +556,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 		color: @clrButtonText;
 		height: 2.1em;
 		font-size: 1em;
+		margin-left: 6px;
 
 		img.content-mask {
 			background-color: @clrButtonText;
@@ -619,6 +620,12 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 			.field.photo-picker .drop-note {
 				color: @clrPrefsTextFaded;
 				font-size: 0.9em;
+			}
+
+			.field.photo-picker .photo-options {
+				a:hover {
+					color: @clrButtonText;
+				}
 			}
 		}
 	}
