Arc-Dark: text color tweaks

--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -198,7 +198,7 @@
 //------------------------------------------------------------
 .open-tracking-icon img.content-mask {
 	&.unopened {
-		background-color: @clrListTextFadedMore;
+		background-color: @clrListTextFaded;
 	}
 
 	&.opened {
