Arc-Dark: message image warning bar

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -513,6 +513,24 @@
 	}
 }
 
+.autoload-images-header {
+	border: none;
+	border-left: 3px solid @clrWarningYellow;
+	border-radius: 0px;
+	background-color: @clrWarningBar;
+	color: @clrTextFadedLess;
+	margin-bottom: 16px;
+
+	.option {
+		color: @clrWarningYellow;
+		cursor: pointer;
+
+		&:hover {
+			color: @clrWarningYellow;
+		}
+	}
+}
+
 //------------------------------------------------------------
 // Translation header
 //------------------------------------------------------------
