--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -216,3 +216,25 @@
 .thread-list-narrow .mail-important-icon {
 	margin-top: -3px;
 }
+
+//------------------------------------------------------------
+// Gmail labels
+//------------------------------------------------------------
+.thread-list .thread-injected-mail-labels,
+.draft-list .thread-injected-mail-labels {
+	margin-right: 0;
+
+	.mail-label {
+		box-shadow: none !important;
+		background: @clrAccent !important;
+		color: @clrListTextActive !important;
+	}
+}
+
+.thread-list .focused .mail-label,
+.draft-list .focused .mail-label,
+.thread-list.handler-split .list-item.selected .mail-label {
+	box-shadow: none !important;
+	background-color: @clrListTextActive !important;
+	color: @clrAccent !important;
+}
