Arc-Dark: remove filter from thread list gmail labels

--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -279,4 +279,5 @@
 	box-shadow: none !important;
 	background-color: @clrListTextActive !important;
 	color: @clrAccent !important;
+	filter: none;
 }
