Arc-Dark: replace webkit-filter with filter

--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -9,7 +9,7 @@
 	-webkit-mask-image: @image;
 	-webkit-mask-size: 14px;
 	-webkit-mask-position: 6px 4px;
-	-webkit-filter: none;
+	filter: none;
 	background-color: @color;
 }
 
