--- a/Arc-Dark/styles/threadlist-toolbar.less
+++ b/Arc-Dark/styles/threadlist-toolbar.less
@@ -49,7 +49,7 @@
 		-webkit-mask-image: @image;
 		-webkit-mask-size: @size;
 		-webkit-mask-position: 0px 0px;
-		-webkit-filter: none;
+		filter: none;
 		background-color: @color;
 	}
 
