Arc-Dark: tweak gmail label font weight

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -486,6 +486,7 @@
 	background: @clrAccent !important;
 	color: @clrTextActive !important;
 	margin-top: 3px;
+	font-weight: 500;
 
 	img.content-mask {
 		background-color: @clrTextActive !important;
