--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -265,6 +265,7 @@
 .thread-list .thread-injected-mail-labels,
 .draft-list .thread-injected-mail-labels {
 	margin-right: 0;
+	font-weight: 500;
 
 	.mail-label {
 		box-shadow: none !important;
