Arc-Dark: undo/redo toasts

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -56,6 +56,11 @@
 @clrToolBtnText:rgba(207, 218, 231, 0.8);
 @clrToolBtnTextActive: #ffffff;
 
+@clrToastBg: darken(@clrWindowBg, 2%);
+@clrToastBorder: @clrWindowBorder;
+@clrToastText: @clrText;
+@clrToastTextActive: @clrTextActive;
+
 //---------------------------------
 // Lists / Threadlist
 //---------------------------------
