Arc-Dark: fix draft message tokenizing field dropdown menu

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -143,6 +143,7 @@
 @clrPopoverText: #d3dae3;
 @clrPopoverTextFaded: fade(@clrPopoverText, 60%);
 @clrPopoverTextActive: #ffffff;
+@clrPopoverTextActiveFaded: fade(@clrPopoverTextActive, 60%);
 
 //------------------------------------------------------------
 // LESS mixins
